# NexusAI

./: .env  .env.api_keys  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Python基础语法.ipynb  README.md  README_CN.md  pyproject.toml  requirements.txt
.agents/skills/x-card/: SKILL.md
.agents/skills/x-markdown/: SKILL.md
.claude/skills/use-x-chat/: SKILL.md
.claude/skills/x-components/: SKILL.md
.cursor/skills/x-chat-provider/: SKILL.md
.github/: copilot-instructions.md
data/: chat_history.json  runtime_config.json
docs/: AI开发转型学习计划.md  AI开发转型学习计划_审视与增强版.md  Python基础语法.ipynb  pathlib模块.ipynb  pathlib模块.md  第一周.md  第三周.md  第二周.md  第六周.md  第四周.md
docs/weeks/: 第3周.md  第5周.md  第6周.md  第七周.md
mcp-server/: package.json  pnpm-lock.yaml  tsconfig.json
mcp-server/src/: backend-client.ts  config.ts  main.ts
mcp-server/src/tools/: list-docs.ts  read-doc.ts  search-docs.ts
postman/: my_python_ai_app.postman_collection.json  my_python_ai_app_local.postman_environment.json
scripts/: debug_chunk_splitter.py
sql/: init.sql
src/app/: agent_trace_store.py  cli.py  client.py  config.py  conversation_store.py  db.py  document_store.py  exceptions.py  health.py  history.py  logger.py  main.py  paths.py  prompts.py  runtime_config.py  schemas.py  server.py
src/app/api/: agent.py  exception_handlers.py  routes.py
src/app/data/: chat_history.json  (+5 more)
tests/: test_assistant_run_store.py  test_assistant_stream.py  test_main.py
web/: .env.example  .gitignore  .npmrc  package.json  pnpm-lock.yaml  tsconfig.json
web/config/: config.ts
web/src/: app.tsx  typings.d.ts
(+211 files in other folders)
