[project]
name = "my-python-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "fastapi==0.136.0",
    "h11==0.16.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "packaging==26.1",
    "pluggy==1.6.0",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.3.4",
    "sentence-transformers>=4.1.0",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pydantic-settings>=2.14.0",
    "pygments==2.20.0",
    "pytest==9.0.3",
    "python-dotenv==1.2.2",
    "python-multipart>=0.0.28",
    "requests==2.33.1",
    "setuptools==82.0.1",
    "starlette==1.0.0",
    "numpy<2",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version < '3.13'",
    "transformers==4.41.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.45.0",
    "wheel==0.46.3",
    "flagembedding==1.2.11",
    "peft==0.11.1",
    "jsonschema>=4.26.0",
]
